Cleanup in build.sbt